--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --watch=false",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
@@ -22,20 +24,21 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.12",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "tailwindcss": "^4",
-    "ts-jest": "^29.4.6",
+    "ts-jest": "29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
