--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,5 @@
+# Link to the documentation for the workflow events that trigger the workflow
+# https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows
 name: Test
 
 on:
